# tiny-swap-bench

./: .gitignore  DESIGN.md  README.md  pyproject.toml
configs/: base.yaml
configs/norm/: post_ln_ln.yaml  pre_ln_ln.yaml  pre_ln_rms.yaml  pre_ln_rms_qk.yaml
configs/optim/: adamw.yaml  lion.yaml  muon.yaml
configs/pe/: alibi.yaml  learned_abs.yaml  nope.yaml  rope.yaml
eval/: prompts.json
experiments/baseline_reproducibility/: run.py
experiments/baseline_reproducibility/20260422-183514-094f64a8/: results_table.json
experiments/baseline_reproducibility/20260422-190100-39deb054/: results_table.json
experiments/rope_reproducibility/: run.py
experiments/rope_reproducibility/20260422-210510-4bce3c7e/: results_table.json
experiments/rope_reproducibility/20260422-210756-6ed33053/: results_table.json
src/tiny_swap_bench/: __init__.py  config_schema.py
src/tiny_swap_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tiny_swap_bench/data/: tinystories.py
src/tiny_swap_bench/eval/: flops_count.py  generate_samples.py  llm_judge_stub.py  validation_loss.py
src/tiny_swap_bench/model/: attention.py  decoder_block.py  mlp.py  norm_layer_ln.py  norm_layer_rms.py  pe_alibi.py  pe_learned_abs.py  pe_nope.py  pe_rope.py  reference_transformer.py
src/tiny_swap_bench/optim/: __init__.py  adamw.py  lion.py  muon.py
tests/: conftest.py  test_e2e_train_smoke.py  test_flops_counter.py  test_forward_shapes.py  test_gpu_smoke_optional.py  test_optimizer_nan.py  test_overfit_cpu.py  test_pe_norm_dropin.py  test_yaml_configs.py
(+28 files in other folders)
